--- a/style.css
+++ b/style.css
@@ -12,4 +12,50 @@ body * {
 body {
     background: linear-gradient(150deg, #0F2B05, #000000);
     height: 100vh;
+    text-align: center;
+}
+
+header {
+    padding: 75px 0;
+
+}
+
+
+.card {
+    display: inline-block;
+    width: 304px;
+    height: 456px;
+    background-image: url(./assets/bg-explorer.svg);
+ 
+}
+
+
+.card > img {
+    width: 150px;
+    height: 150px;
+    object-fit: cover;
+    border-radius: 50%;
+    border: 2px solid #f7dd43;
+    margin-top: 115px;
+}
+
+
+.info { 
+    margin-top: 98px;
+    color: white;
+    margin-left: 50px;
+    text-align: left;
+}
+
+.info h1 {
+
+    font-size: 18px;
+    line-height: 140%;
+}
+
+
+.info p {
+
+    font-size: 13px;
+    line-height: 140%;
 }
